--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -35,31 +35,31 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://en.wikipedia.org/wiki/File:Albert_Einstein_photo_1921.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
+          <p class="title">Albert Einstein</p>
+          <p>Physicist</p>
+          <p class="card-text">Albert Einstein developed the general theory of relativity and made many substantial contributions to physics.</p>
           <p>person1@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://en.wikipedia.org/wiki/File:Enrico_Fermi_1943-49.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
+          <p class="title">Enrico Fermi</p>
+          <p>Physicist</p>
+          <p class="card-text">Enrico Fermi is credited with the creation of the world's first atomic bomb and nuclear reactor.</p>
           <p>person2@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://en.wikipedia.org/wiki/File:Niels_Bohr.jpg" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
+          <p class="title">Niels Bohr</p>
+          <p>Atomic physicist</p>
+          <p class="card-text">Niels Bohr made fundamental contributions to understanding atomic structure and quantum theory.</p>
           <p>person3@example.com</p>
         </div>
       </div>
