--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -35,7 +35,7 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="https://en.wikipedia.org/wiki/File:Albert_Einstein_photo_1921.jpg" alt="Card image">
+        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/1/11/Albert_Einstein_photo_1921.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Albert Einstein</p>
           <p>Physicist</p>
@@ -45,7 +45,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="https://en.wikipedia.org/wiki/File:Enrico_Fermi_1943-49.jpg" alt="Card image">
+        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Enrico_Fermi_1943-49.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Enrico Fermi</p>
           <p>Physicist</p>
@@ -55,7 +55,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="https://en.wikipedia.org/wiki/File:Niels_Bohr.jpg" alt="Card image">
+        <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Niels_Bohr.jpg" alt="Card image">
         <div class="card-body">
           <p class="title">Niels Bohr</p>
           <p>Atomic physicist</p>
