--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -26,4 +26,28 @@
       </div>
     </div>
   </nav>
-  
+</div>
+<div class="card" style="width: 30%;">
+    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/a/a4/2019_Toyota_Corolla_Icon_Tech_VVT-i_Hybrid_1.8.jpg" alt="Card image">
+    <div class="card-body">
+      <p class="title">Best Cars</p>
+      <p>Toyata Corolla</p>
+      <p class="card-text">The Toyota Corolla, which has been in production since 1966, is the best-selling series of automobile in history.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 30%;">
+    <div class="card-body">
+      <p>Contact Customer Service</p>
+      <p>support@bestcars.com</p>
+      <p>Contact our National Advertising team</p>
+      <p>NationalSales@bestcars.com</p>
+      <p>Contact our Public Relationals team</p>
+      <p>PR@bestcars.com</p>
+      <p>Contact the bestcars.com.offices</p>
+      <p>312-611-1111</p>
+      <p>Become a bestcars.com car dealer</p>
+      <p>Visit growwithbestcars.com</p>
+    </div>
+  </div>
+
+</html>  
